--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactapplication",
   "private": true,
-  "homepage": "https://Victoria-hrpnv.github.io/reactApplication",
+  "homepage": "https://victoria-hrpnv.github.io/reactapplication",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
